--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: notionR
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Connect and interact with Notion pages
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Author: Adam Starke
+Maintainer: Adam Starke <afstarke@tnc.org>
+Description: Simple interaction with Notion <notion.com> API <https://developers.notion.com/>
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
